# src/controllers/auth.controller.ts
@@ -1,58 +1,17 @@
 import { Request, Response } from "express";
-import * as Yup from "yup";
-
-// Model
-import UserModel from "../models/user.model";
+import UserModel, { userDTO, userLoginDTO, userUpdatePasswordDTO } from "../models/user.model";
 import { encrypt } from "../utils/encryption";
 import { generateToken } from "../utils/jwt";
 import { IReqUser } from "../middlewares/auth.middleware";
-
-// Schema Register
-type TRegister = {
-    fullname: string;
-    username: string;
-    email: string;
-    password: string;
-    confirmPassword: string;
-}
-
-// Schema Login
-type TLogin = {
-    identifier: string;
-    password: string;
-}
-
-
-const registerValidateSchema = Yup.object({
-    fullname: Yup.string().required(),
-    username: Yup.string().min(5, "Username minimal harus 5 karakter").required(),
-    email: Yup.string().email("Email tidak valid").required(),
-    password: Yup.string()
-        .min(8, "Password minimal harus 8 karakter")
-        .required()
-        .test('at-least-one-uppercase-letter', "Password harus memiliki 1 atau lebih huruf besar", (value) => {
-            if(!value) return false;
-            const regex = /^(?=.*[A-Z])/;
-            return regex.test(value);
-        })
-        .test('at-least-one-number', "Password harus memiliki 1 atau lebih angka", (value) => {
-            if(!value) return false;
-            const regex = /^(?=.*\d)/;
-            return regex.test(value);
-        }),
-    confirmPassword: Yup.string().oneOf([Yup.ref("password"), "" ], "Password tidak sama")
-});
+import response from "../utils/response";
 
 export default {
     async register(req: Request, res: Response) {
-        /**
-        #swagger.tags = ['Auth']
-         */
-        const { fullname, username, email, password, confirmPassword } = req.body as unknown as TRegister;
+        const { fullname, username, email, password, confirmPassword } = req.body;
 
-        try {
+        try { 
             // Validasi Schema Yup
-            await registerValidateSchema.validate({ fullname, username, email, password, confirmPassword });
+            await userDTO.validate({ fullname, username, email, password, confirmPassword });
 
             // Validasi username dan email jika sudah terdaftar
             const existingUser = await UserModel.findOne({ 
@@ -67,7 +26,7 @@ export default {
             };
 
             // simpan user ke database
-            const result = await UserModel.create({ fullname, username, email, password, role: 'user' });
+            const result = await UserModel.create({ fullname, username, email, password, role: 'member' });
             res.status(200).json({ message: "Pendaftaran Berhasil", data: result });
         } catch (error) {
             const err = error as unknown as Error
@@ -76,19 +35,9 @@ export default {
     },
 
     async login(req: Request, res: Response) {
-        /**
-         #swagger.tags = ['Auth']
-         #swagger.requestBody = {
-            required: true,
-            schema: {
-                $ref: '#/components/schemas/LoginRequest'
-            }
-         }
-         */
-        const { identifier, password } = req.body as unknown as TLogin;
-
         try {
-            // Ambil data user berdasarkan Identifier -> (email dan username)
+            const { identifier, password } = req.body;
+            await userLoginDTO.validate({ identifier, password });
             
             const userByIdentifier = await UserModel.findOne({
                 $or: [
@@ -141,12 +90,6 @@ export default {
     },
 
     async me(req: IReqUser, res: Response) {
-        /**
-        #swagger.tags = ['Auth']
-        #swagger.security = [{
-            "bearerAuth": []
-        }]
-         */
         try {
             const user = req.user;
             const result = await UserModel.findById(user?.id);
@@ -156,21 +99,12 @@ export default {
             });
 
         } catch (error) {
-            const err = error as unknown as Error
-            res.status(400).json({ message: err.message, data: null });
+            const err = error
+            response.error(res, err, "Failed to get user profile");
         }
     },
 
     async activation(req: Request, res: Response) {
-        /**
-        #swagger.tags = ['Auth']
-        #swagger.requestBody = {
-            required: true,
-            schema: {
-                $ref: '#/components/schemas/ActivationRequest'
-            }
-        }
-         */
         try {
             const { code } = req.body as {code: string};
 
@@ -195,5 +129,57 @@ export default {
             const err = error as unknown as Error
             res.status(400).json({ message: err.message, data: null });
         }
-    }
+    },
+
+    async updateProfile(req: IReqUser, res: Response){
+        try {
+            const userId = req.user?.id;
+            const { fullname, profilePicture } = req.body;
+            const result = await UserModel.findByIdAndUpdate(userId, {
+                fullname,
+                profilePicture,
+                },
+                {
+                    new: true, 
+                }
+            );
+
+            if(!result) return response.notFound(res, "User not found");
+
+            response.success(res, result, "Profile updated successfully");
+            
+        } catch (error) {
+            response.error(res, error, "Failed to update profile");
+        }
+    },
+    async updatePassword(req: IReqUser, res: Response){
+        try {
+            const userId = req.user?.id;
+            const { oldPassword, password, confirmPassword } = req.body;
+
+            await userUpdatePasswordDTO.validate({
+                oldPassword,
+                password,
+                confirmPassword
+            });
+
+            const user = await UserModel.findById(userId);
+
+            if(!user || user.password !== encrypt(oldPassword))
+                return response.notFound(res, "User not found");
+
+            const result = await UserModel.findByIdAndUpdate(userId, {
+                password: encrypt(password),
+                },
+                {
+                    new: true, 
+                }
+            );
+
+            response.success(res, result, "Password updated successfully");
+            
+        } catch (error) {
+            response.error(res, error, "Failed to update password");
+        }
+    },
 };
